--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,6 +1,6 @@
 <DOCTYPE html>
     <head>
-        <title>mini message board | Home</title>
+        <title>mini message board | New</title>
     </head>
     <body>
         <form method="POST" action="/new">
